[package]
name = "bma-benchmark"
version = "0.0.23"
edition = "2021"
license = "MIT"
authors = ["Sergei S. <div@altertech.com>"]
repository = "https://github.com/alttch/bma-benchmark"
description = "Benchmark for Rust and humans"

[dependencies]
colored = { version = "2" }
lazy_static = "1.4.0"
terminal_size = "0.1.17"
num-format = "0.4.0"
prettytable-rs = "0.10.0"
bma-benchmark-proc = { path = "./bma-benchmark-proc", version = "=0.0.18" }
